recursion.logo.lessons.recursion.logo.spiral.Spiral.scala.code
def spiral(steps:Int, angle:Int, length:Int, increment:Int)
{
  if(steps==0)
  {
    return
  }
  else
  {
    spirale(steps-1,angle,length+increment,increment)
  }
}